--- a/images/web/src/index.html
+++ b/images/web/src/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <!--
   Copyright 2019 Google LLC
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -10,7 +12,6 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<html>
 
 <head>
   <link href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css" rel="stylesheet" />
