show region on launcher page

--- a/images/web/src/index.html
+++ b/images/web/src/index.html
@@ -30,6 +30,8 @@
     <v-app>
       <v-app-bar app>
         <v-toolbar-title>{{ brokerName }}</v-toolbar-title>
+        <v-spacer></v-spacer>
+        <div>{{ brokerRegion }}</div>
       </v-app-bar>
       <v-content>
         <v-layout row wrap clas="justify-center d-flex">
