--- a/images/web/src/index.html
+++ b/images/web/src/index.html
@@ -152,6 +152,32 @@
             </v-card-actions>
           </v-card>
         </v-layout>
+
+        <v-dialog v-model="reload_dialog" width="250" persistent>
+          <v-card>
+            <v-card-title>
+              Session expired
+            </v-card-title>
+
+            <v-card-text>
+              Reload the page to refresh your session.
+            </v-card-text>
+
+            <v-divider></v-divider>
+
+            <v-card-actions>
+              <v-spacer></v-spacer>
+              <v-btn
+                color="primary"
+                text
+                @click="reload()"
+              >
+                Reload
+              </v-btn>
+            </v-card-actions>
+          </v-card>
+        </v-dialog>
+
       </v-content>
     </v-app>
   </div>
