fix issues with quick launch, add app display name to quick launch UI

--- a/images/web/src/index.html
+++ b/images/web/src/index.html
@@ -42,6 +42,7 @@
     <v-app v-if="quickLaunchEnabled">
         <div class="loading">
         <scale-loader size="200px" :loading="true" color="#E0E0E0"></scale-loader>
+        <span>{{quickLaunchText}}</span>
       </div>
     </v-app>
     <v-app v-else>
